libmeegotouch (0.20.89~1) unstable; urgency=low

  * unreleased

 -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Mon, 28 Feb 2011 15:45:03 +0200

libmeegotouch (0.20.88-1) unstable; urgency=low

  * New version
  * Fixes: NB#230586
  * Fixes: NB#227711 - [TASK] MSlider::setSteps is confusing
  * Fixes: NB#227536 - Inconsistency of number of tabs on MToolbar
  * Fixes: NB#222807 - [TASK] mthemedaemon should use the meego graphicssystem
  * Fixes: NB#226637 - MWindow::isOnDisplay() returns true for quite some time after the window has exited the display
  * Fixes: NB#223291 Memory leak: MListViewPrivate will connects the same signal
  * Fixes: NB#221617 - Each MAction adds approximately 5ms to every MApplicationPage appearance (Using gallery css)
  * Fixes: NB#224151 - Libmeegotouch is highly depend of the word "base" due to old-theming requirements.
  * Fixes: NB#228912 - Button no longer draws correctly
  * Fixes: NB#210573 - Crash in /usr/lib/meegotouch/applicationextensions/mapplicationextensionrunner
  * Fixes: Build break on mac.

 -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Mon, 28 Feb 2011 15:37:38 +0200

libmeegotouch (0.20.87-1) unstable; urgency=low

  * New version
  * Fixes: NB#229699 - TextEdit tooltip needs font style attribute
  * Fixes: NB#227075 - mdecorator is constantly doing window updates on the background
  * Fixes: NB#212215 - MTheme::pixmap() returns the invalid pixmap even if the original is available
  * Fixes: NB#225394 - MLocale::formatDateTime() returns wrong values for some format codes
  * Fixes: NB#220018 - chainTask servicefw property does not work with apps running through applauncherd
  * Fixes: NB#193497, Clock; Unusual time display separator (.) in Finnish.
  * Fixes: NB#220652 - It is impossible to pan long multimedia message with lots of links in MMS Viewer
  * Fixes: NB#228259 WidgetsGallery - enable word wrap for the system dialog box
  * Fixes: Fix build break in maemo 5 build.
  * Fixes: NB#224
